--- a/package.json
+++ b/package.json
@@ -30,5 +30,12 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "zod": "^4.3.5"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
+    "@types/cross-spawn": "^6.0.6",
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.0.3"
   }
 }
